--- a/article.html
+++ b/article.html
@@ -152,7 +152,6 @@
     </style>
 </head>
 <body>
-
     <header>
         <div class="logo-box">
             <img src="images/WhatsApp_Image_2025-06-14_at_18.56.02_46024ec9-removebg-preview-1.png" alt="لوجو أنامل الطرق">
@@ -160,14 +159,12 @@
         </div>
         <a href="index.html#blog" class="back-btn"><i class="fas fa-arrow-right"></i> العودة للمدونة</a>
     </header>
-
     <main class="article-wrapper">
         <div class="article-text">
             <h1 id="article-title">جاري التحميل...</h1>
             <div id="article-body" class="content-body">
             </div>
         </div>
-
         <div class="article-visual">
             <img id="article-img" src="" alt="صورة توضيحية للمشروع">
         </div>
@@ -175,11 +172,10 @@
     <footer class="main-footer">
     <div class="container">
         <div class="footer-grid">
-            
             <div class="footer-col identity">
                 <div class="footer-logo">
                     <img src="images/WhatsApp_Image_2025-06-14_at_18.56.02_46024ec9-removebg-preview-1.png" alt="لوجو أنامل الطرق">
-                    <span>أنامل الطرق</span>
+                    <span>أنامل الطرق الحديثة</span>
                 </div>
                 <p class="footer-about-text">
                     نحن في شركة أنامل الطرق للمقاولات العامة، نضع خبراتنا الطويلة وأحدث تقنياتنا الهندسية لنبني طرقاً تخدم المستقبل وتساهم في نهضة البنية التحتية للمملكة العربية السعودية وفق رؤية 2030.
@@ -188,7 +184,6 @@
                     <a href="https://wa.me/966577685689" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
-
             <div class="footer-col quick-links">
                 <h3>روابط سريعة</h3>
                 <ul>
@@ -200,12 +195,15 @@
                     <li><a href="index.html#blog">المدونة</a></li>
                 </ul>
             </div>
-
             <div class="footer-col footer-contact">
                 <h3>بيانات التواصل</h3>
                 <div class="contact-item">
                     <i class="fas fa-phone-alt"></i>
                     <p>0577685689</p>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-phone-alt"></i>
+                    <p>0541684510</p>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-whatsapp"></i>
@@ -215,14 +213,8 @@
                     <i class="fas fa-map-marker-alt"></i>
                     <p>السعودية - جدة - حي الفيصلية</p>
                 </div>
-                <div class="contact-item">
-                    <i class="fas fa-envelope"></i>
-                    <p>info@anamel-roads.com</p>
-                </div>
             </div>
-
         </div>
-
         <div class="footer-bottom">
             <hr class="footer-divider">
             <div class="bottom-flex">
@@ -234,8 +226,7 @@
             </div>
         </div>
     </div>
-</footer>
-
+    </footer>
     <script>
         const articlesData = [
             {
