--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أنامل الطرق الحديثة للمقاولات العامة</title>
+    <title>أنامل الطرق الحديثة للاسفلت</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -335,7 +335,14 @@
                             <strong>0577685689</strong>
                         </div>
                     </a>
-
+                    <a href="tel:0541684510" class="info-card">
+                        <div class="info-icon"><i class="fas fa-phone-alt"></i></div>
+                        <div class="info-text">
+                            <span>اتصل بنا</span>
+                            <strong>0541684510</strong>
+                        </div>
+                    </a>
+   
                     <a href="https://wa.me/966577685689" target="_blank" class="info-card whatsapp">
                         <div class="info-icon"><i class="fab fa-whatsapp"></i></div>
                         <div class="info-text">
@@ -426,16 +433,16 @@
                     <p>0577685689</p>
                 </div>
                 <div class="contact-item">
+                    <i class="fas fa-phone-alt"></i>
+                    <p>0541684510</p>
+                </div>
+                <div class="contact-item">
                     <i class="fab fa-whatsapp"></i>
                     <p>0577685689</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
                     <p>السعودية - جدة - حي الفيصلية</p>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-envelope"></i>
-                    <p>info@anamel-roads.com</p>
                 </div>
             </div>
 
